# dimabot

./: .env  .env.example  .gitignore  CREDENTIALS_CHECK.md  DEPLOY.md  Dockerfile  README.md  READY_TO_TEST.md  TESTING_GUIDE.md  YUKASSA_SETUP.md  bot.py  config.py  docker-compose.yml  english-bot.service  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  test-payment.ts
.claude/: settings.local.json
assets/: .gitkeep  README.md
assets/курсы/7 шагов/: 7шагов.txt
assets/мини-уроки/: мини-урок.txt
bot/: __init__.py  config.py  conversation.py  main.py
bot/handlers/: help.py  mini_lesson.py  products.py  start.py
bot/keyboards/: inline.py
database/: crud.py  db.py  models.py
dimabot/: __init__.py  activity.py  config.py  handlers.py  keyboards.py  main.py  settings.py  storage.py  texts.py
dimabot/handlers/: __init__.py  mini_course.py
dimabot/keyboards/: __init__.py  mini_course.py
keyboards/: inline.py
prompts/: products.py
services/: payment.py
src/: bot.ts  config.ts  courses.ts  prompts.ts  types.ts
src/database/: index.ts
src/handlers/: callbacks.ts  courses.ts  start.ts
src/keyboards/: index.ts
src/services/: webhook.ts  yukassa.ts
systemd/: dimabot.service
tests/: test_config.py  test_conversation.py
